--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-
+  assets:
+    - lib/assets/cryptocurrency.png
+    - lib/assets/news.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -64,11 +66,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-
-  fonts:
-    - family: MyFlutterApp # the name of your font family
-      fonts:
-        - asset: lib/fonts/MyFlutterApp.ttf # your font file name and the directory
 
   # fonts:
   #   - family: Schyler
