--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   google_fonts: ^2.1.0
   auto_size_text: ^3.0.0-nullsafety.0
   curved_navigation_bar: ^0.4.0-nullsafety.0
-
+  animate_icons: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +53,7 @@ flutter:
   assets:
     - lib/assets/cryptocurrency.png
     - lib/assets/news.png
-
+    - lib/assets/exchange.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
