--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   auto_size_text: ^3.0.0-nullsafety.0
   curved_navigation_bar: ^0.4.0-nullsafety.0
   animate_icons: ^2.0.0
+  flutter_staggered_animations: ^1.0.0
 
 dev_dependencies:
   flutter_test:
