--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   curved_navigation_bar: ^0.4.0-nullsafety.0
   animate_icons: ^2.0.0
   flutter_staggered_animations: ^1.0.0
+  webview_flutter: ^2.0.8
 
 dev_dependencies:
   flutter_test:
