--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   animate_icons: ^2.0.0
   flutter_staggered_animations: ^1.0.0
   webview_flutter: ^2.0.8
+  like_button: ^2.0.2
 
 dev_dependencies:
   flutter_test:
