--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   hexcolor: ^2.0.3
   google_fonts: ^2.1.0
   auto_size_text: ^3.0.0-nullsafety.0
-  curved_navigation_bar: ^0.4.0-nullsafety.0
+  curved_navigation_bar: ^1.0.1
   animate_icons: ^2.0.0
   flutter_staggered_animations: ^1.0.0
   webview_flutter: ^2.0.8
   like_button: ^2.0.2
+  flutter_sticky_header: ^0.6.0
 
 dev_dependencies:
   flutter_test:
