1)Worked on see all screen UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   webview_flutter: ^2.0.8
   like_button: ^2.0.2
   flutter_sticky_header: ^0.6.0
+  material_floating_search_bar: ^0.3.4
+  provider: ^5.0.0
+  implicitly_animated_reorderable_list: ^0.4.0
 
 dev_dependencies:
   flutter_test:
