--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   provider: ^5.0.0
   implicitly_animated_reorderable_list: ^0.4.0
   clippy_flutter: ^2.0.0-nullsafety.1
-
+  palette_generator: ^0.3.0
+  sizer: ^2.0.13
 dev_dependencies:
   flutter_test:
     sdk: flutter
