--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   story_view: ^0.13.1
   dashed_circle: ^0.0.2
   get: ^4.1.4
+  syncfusion_flutter_charts: ^19.2.51
+  intl: ^0.17.0
+  fl_chart: ^0.36.3
+  lottie: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +68,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/cryptocurrency.png
-    - lib/assets/news.png
-    - lib/assets/exchange.png
+    - lib/assets/
+    - lib/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
