--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  hexcolor: ^2.0.3
   google_fonts: ^2.1.0
   auto_size_text: ^3.0.0-nullsafety.0
   animate_icons: ^2.0.0
@@ -49,6 +48,7 @@ dependencies:
   intl: ^0.17.0
   fl_chart: ^0.36.3
   lottie: ^1.1.0
+  lint: ^1.6.0
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +68,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/
-    - lib/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
