--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   fl_chart: ^0.36.3
   lottie: ^1.1.0
   lint: ^1.6.0
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
