--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   lottie: ^1.1.0
   lint: ^1.6.0
   cached_network_image: ^3.1.0
+  connectivity_plus: ^1.1.0
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
