--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.1.0
   connectivity_plus: ^1.1.0
   carousel_slider: ^4.0.0
+  google_nav_bar: ^5.0.5
 
 dev_dependencies:
   flutter_test:
