--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   connectivity_plus: ^1.1.0
   carousel_slider: ^4.0.0
   google_nav_bar: ^5.0.5
+  data_connection_checker: ^0.3.4
 
 dev_dependencies:
   flutter_test:
