--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,11 @@ dependencies:
   carousel_slider: ^4.0.0
   google_nav_bar: ^5.0.5
   data_connection_checker: ^0.3.4
+  flutter_html: ^2.1.5
+  firebase_auth: ^3.1.3
+  google_sign_in: ^5.1.1
+  shared_preferences: ^2.0.8
+  firebase_core: ^1.7.0
 
 dev_dependencies:
   flutter_test:
