--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,11 +92,9 @@ flutter:
   # example:
 
   # fonts:
-  #   - family: Schyler
+  #   - family: Blanka
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  #       - asset: lib/fonts/Blanka-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
