--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   custom_refresh_indicator: ^1.0.0
   glassmorphism: ^3.0.0
   readmore: ^2.1.0
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
