--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   readmore: ^2.1.0
   url_launcher: ^6.0.12
   clippy_flutter: ^2.0.0-nullsafety.1
+  like_button: ^2.0.3
 
 dev_dependencies:
   flutter_test:
