1)Worked on some new changes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,3 +50,8 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+
+}
