--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   like_button: ^2.0.3
   firebase_messaging: ^11.2.3
   firebase_analytics: ^9.0.3
+  flutter_styled_toast: ^2.0.0
 
 dev_dependencies:
   flutter_test:
