--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,6 @@ dependencies:
   carousel_slider: ^4.0.0
   google_nav_bar: ^5.0.5
   data_connection_checker: ^0.3.4
-  flutter_html: ^2.1.5
   firebase_auth: ^3.1.3
   google_sign_in: ^5.1.1
   shared_preferences: ^2.0.8
@@ -63,6 +62,7 @@ dependencies:
   firebase_messaging: ^11.2.3
   firebase_analytics: ^9.0.3
   flutter_styled_toast: ^2.0.0
+  webview_flutter_plus: ^0.2.3+1
 
 dev_dependencies:
   flutter_test:
