--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   firebase_messaging: ^11.2.3
   firebase_analytics: ^9.0.3
   flutter_styled_toast: ^2.0.0
-  webview_flutter_plus: ^0.2.3+1
+  flutter_html: ^2.1.5
 
 dev_dependencies:
   flutter_test:
