--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_staggered_animations: ^1.0.0
   webview_flutter: ^2.0.8
   material_floating_search_bar: ^0.3.4
-  provider: ^5.0.0
+  provider: ^6.0.0
   implicitly_animated_reorderable_list: ^0.4.0
   palette_generator: ^0.3.0
   sizer: ^2.0.13
@@ -63,6 +63,10 @@ dependencies:
   firebase_analytics: ^9.0.3
   flutter_styled_toast: ^2.0.0
   flutter_html: ^2.1.5
+  flutter_math_fork: ^0.5.0
+  onboarding: ^2.1.0
+  flutter_blurhash: ^0.6.0
+
 
 dev_dependencies:
   flutter_test:
